feat: style tweaks

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<p><a name="nav-menu" id="nav-menu"><strong>Site menu</strong></a></p>
+<p><a name="nav-menu" id="nav-menu"></a></p>
 
 <ul>
     {{ range .Site.Menus.main }}
@@ -11,4 +11,4 @@
     {{ end }}
 </ul>
 
-<p><a href="#">Back to top</a></p>
+<!-- <p><a href="#">Back to top</a></p> -->
