--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -1,6 +1,44 @@
 <style type="text/css">
   body {
+    margin: 5%;
     font-size: 150%;
-    font-family: muli,avenir,helvetica neue,helvetica,ubuntu,roboto,noto,segoe ui,arial,sans-serif;
+    font-family: Berkeley Mono,muli,avenir,helvetica neue,helvetica,ubuntu,roboto,noto,segoe ui,arial,sans-serif;
   }
+
+  @font-face {
+    font-family: Berkeley Mono;
+    font-style: normal;
+    font-weight: 400;
+    src: local("Berkeley Mono"),
+        url("/fonts/BerkeleyMono-Regular.woff") format("woff"),
+        url("/fonts/BerkeleyMono-Regular.woff2") format("woff2");
+  }
+
+  @font-face {
+    font-family: Berkeley Mono;
+    font-style: italic;
+    font-weight: 400;
+    src: local("Berkeley Mono"),
+        url("/fonts/BerkeleyMono-Italic.woff") format("woff"),
+        url("/fonts/BerkeleyMono-Italic.woff2") format("woff2");
+  }
+
+  @font-face {
+    font-family: Berkeley Mono;
+    font-style: normal;
+    font-weight: 700;
+    src: local("Berkeley Mono"),
+        url("/fonts/BerkeleyMono-Bold.woff") format("woff"),
+        url("/fonts/BerkeleyMono-Bold.woff2") format("woff2");
+  }
+
+  @font-face {
+    font-family: Berkeley Mono;
+    font-style: italic;
+    font-weight: 700;
+    src: local("Berkeley Mono"),
+        url("/fonts/BerkeleyMono-BoldItalic.woff") format("woff"),
+        url("/fonts/BerkeleyMono-BoldItalic.woff2") format("woff2");
+  }
+
 </style>
