--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -5,6 +5,17 @@
     font-family: Berkeley Mono,muli,avenir,helvetica neue,helvetica,ubuntu,roboto,noto,segoe ui,arial,sans-serif;
   }
 
+  ul {
+    list-style: none;
+  }
+  li:before { 
+    content: '> ';
+  }
+  li {
+    font-size: 85%;
+    padding: 0.15em;
+  }
+
   @font-face {
     font-family: Berkeley Mono;
     font-style: normal;
