--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,6 +9,26 @@
       </a>
     </li>
     {{ end }}
+    <li id="blinking-cursor"></li>
 </ul>
+
+<script>
+  (function() {
+    const cursorElement = document.getElementById('blinking-cursor');
+    const blinkInterval = 500; // Time in milliseconds, 500ms = 0.5s
+
+    if (!cursorElement) {
+      console.error('Element with id "blinking-cursor" not found');
+      return;
+    }
+
+    function toggleVisibility() {
+      cursorElement.style.visibility = cursorElement.style.visibility === 'hidden' ? 'visible' : 'hidden';
+    }
+
+    setInterval(toggleVisibility, blinkInterval);
+  })();
+</script>
+
 
 <!-- <p><a href="#">Back to top</a></p> -->
