feat: tweak colors

--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -1,6 +1,6 @@
 <style type="text/css">
 
-  
+
 :root {
     /* 2.1 Dark theme color variables */
     --bg0-dark:       #22282c;
@@ -113,7 +113,7 @@
     margin: 5%;
     font-size: 150%;
     font-family: Berkeley Mono,muli,avenir,helvetica neue,helvetica,ubuntu,roboto,noto,segoe ui,arial,sans-serif;
-    background-color: var(--bg3-dark);
+    background-color: var(--bg2-dark);
     color: var(--fg-dark);
   }
 
@@ -125,7 +125,12 @@
     color: var(--faded-aqua);
   }
 
+  h1, h2, h3, h4, h5, h6 {
+    padding: 0.5em;
+  }
+
   h1 {
+    background-color: var(--bg1-dark);
     color: var(--dim-red);
   }
 
