--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,10 @@
   <h1 class="title">{{ .Site.Title }}</h1>
   <h6 class="subtitle">
       {{ .Site.Params.byline }} <br></br>
-      see my writing at <a href={{ .Site.Params.link }}>{{ .Site.Params.linkText }}</a>
+      see my writing @ <a href={{ .Site.Params.link }}>{{ .Site.Params.linkText }}</a>
+      <br></br> learn who i am @ <a href={{ .Site.Params.aboutMeLink }}>dupe.lol/about-me</a>
+      <br></br> see my code @ <a href={{ .Site.Params.githubLink }}> github/njdup</a>
+
   </h6>
 
 
