feat: cute little under construction banner

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,6 @@
 {{ define "main" }}
   <h1 class="title">{{ .Site.Title }}</h1>
+  <h6><em>under construction...</em> <span class="progress-bar">[------] 0%</span></h6>
   <h6 class="subtitle">
       {{ .Site.Params.byline }} <br></br>
       see my writing @ <a href={{ .Site.Params.link }}>{{ .Site.Params.linkText }}</a>
