--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -193,4 +193,17 @@
         url("/fonts/BerkeleyMono-BoldItalic.woff2") format("woff2");
   }
 
-</style>
+  .progress-bar {
+    display: inline-block;
+  }
+
+  @keyframes blink {
+    0% {
+        visibility: hidden;
+    }
+    100% {
+        visibility: visible;
+    }
+  }
+
+ </style>
