--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -1,6 +1,5 @@
 <style type="text/css">
 
-
 :root {
     /* 2.1 Dark everforest theme color variables */
     --bg0-dark:       #22282c;
@@ -204,6 +203,10 @@
     100% {
         visibility: visible;
     }
+  }
+
+  .hidden-div {
+    display: none;
   }
 
  </style>
