--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,18 +1,16 @@
 <p><a name="nav-menu" id="nav-menu"></a></p>
 
-<div class="hidden-div">
-    <ul>
-        {{ range .Site.Menus.main }}
-        <li>
-          <a href="{{ .URL }}">
-          {{ $text := print .Name | safeHTML }}
-          {{ $text }}
-          </a>
-        </li>
-        {{ end }}
-        <!--    <li id="blinking-cursor"></li> -->
-    </ul>
-</div>
+<ul>
+    {{ range .Site.Menus.main }}
+    <li>
+      <a href="{{ .URL }}">
+      {{ $text := print .Name | safeHTML }}
+      {{ $text }}
+      </a>
+    </li>
+    {{ end }}
+    <!--    <li id="blinking-cursor"></li> -->
+</ul>
 
 <!-- TODO: maybe add back this blinking cursor after removing under construction effect 
 <script>
@@ -40,17 +38,15 @@
 
         if (!progressBar) {
             console.log("No progress bar found");
-            showHiddenContent();
             return;
         }
 
         function animateProgressBar() {
             const progressStates = [
-                "[==>--------]  20%",
-                "[====>------]  40%",
-                "[======>----]  60%",
-                "[========>--]  80%",
-                "[==========>] 100%",
+                "[>-----] 20%",
+                "[=>----] 40%",
+                "[===>--] 60%",
+                "[====>-] 80%"
             ];
             let progressIndex = 0;
 
@@ -59,17 +55,20 @@
                 progressIndex++;
                 if (progressIndex === progressStates.length) {
                     clearInterval(progressInterval);
-                    progressBar.textContent = "[==========>] 100%, done!";
-                    showHiddenContent();
-               }
-            }, 275);
+                    blinkCursor();
+                }
+            }, 800);
         }
 
-        function showHiddenContent() {
-            var hiddenDivs = document.getElementsByClassName("hidden-div");
-            for (var i = 0; i < hiddenDivs.length; i++) {
-                hiddenDivs[i].style.display = "block";
-            }
+        function blinkCursor() {
+            const blinkingState = "[====>-] 80%";
+            const hiddenState = "[====->] 80%";
+            let showCursor = false;
+
+            setInterval(() => {
+                progressBar.textContent = showCursor ? blinkingState : hiddenState;
+                showCursor = !showCursor;
+            }, 800);
         }
 
         animateProgressBar();
