--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,7 @@
   <h6 class="subtitle">
       {{ .Site.Params.byline }} <br></br>
       see my writing @ <a href={{ .Site.Params.link }}>{{ .Site.Params.linkText }}</a>
-      <br></br> learn who i am @ <a href={{ .Site.Params.aboutMeLink }}>dupe.lol/about-me</a>
+      <br></br> learn who i am @ <a href={{ .Site.Params.aboutMeLink }}>dupe.codes/about-me</a>
       <br></br> see the code @ <a href={{ .Site.Params.githubLink }}> github/njdup</a>
 
   </h6>
