--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,6 +5,16 @@
     <body>
         {{- partial "header.html" . -}}
 
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-TNGFW3BDX1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-TNGFW3BDX1');
+        </script>
+
         {{- block "main" . }}{{- end }}
 
         {{- partial "footer.html" . -}}
