chore: small changes

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
       {{ .Site.Params.byline }} <br></br>
       see my writing @ <a href={{ .Site.Params.link }}>{{ .Site.Params.linkText }}</a>
       <br></br> learn who i am @ <a href={{ .Site.Params.aboutMeLink }}>dupe.codes/about-me</a>
-      <br></br> see the code @ <a href={{ .Site.Params.githubLink }}> github/njdup</a>
+      <br></br> see the code @ <a href={{ .Site.Params.githubLink }}> github/dupe-codes</a>
     </h6>
     {{ .Content }}
   </div>
