--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -43,7 +43,7 @@
 
 {{ if not .Params.noComments }}
 <script src="https://utteranc.es/client.js"
-        repo="njdup/projects-archive"
+        repo="dupe-codes/projects-archive"
         issue-term="pathname"
         label="comment"
         theme="photon-dark"
