--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -10,11 +10,10 @@
           </a>
         </li>
         {{ end }}
-        <!--    <li id="blinking-cursor"></li> -->
+        <li id="blinking-cursor"></li> 
     </ul>
 </div>
 
-<!-- TODO: maybe add back this blinking cursor after removing under construction effect 
 <script>
   (function() {
     const cursorElement = document.getElementById('blinking-cursor');
@@ -32,7 +31,7 @@
     setInterval(toggleVisibility, blinkInterval);
   })();
 </script>
--->
+
 
 <script>
     (function() {
@@ -75,6 +74,5 @@
         animateProgressBar();
     })()
 </script>
-
 
 <!-- <p><a href="#">Back to top</a></p> -->
